fixing little errors still not adaptive on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html {
   a:hover{color:orange}
   
   footer {position: static;
-    bottom:auto o;
+    bottom:00;
     left: 0;
     width: 100%;
     text-align: center; /* Center align the content */
